# church_report

./: Dockerfile  deploy.py  pyproject.toml  requirements.txt  secrets.json
.config/local_dev/: gunicorn.py  report.nginx  supervisord.conf
app/: Untitled.ipynb  Untitled1.ipynb  algorithm-1주차.ipynb  algorithm-2주차.ipynb  algorithm-3주차.ipynb  crossfit_2020-05-29.py  crossfit_2020-06-01.py  crossfit_from_10000_to_13000_2020-06-07.py  crossfit_from_5000_to_10000_2020-06-04.py  crossfit_to_4000_2020-06-04.py  crossfit_to_5000_2020-06-04.py  kopa-tour-crawling.ipynb  postmate 크롤링.ipynb  test.py  user make.ipynb  알고리즘 6주차.ipynb  크로스핏 지부 데이터 다운로드.ipynb
app/config/: settings.py  urls.py
app/config/settings/: base.py  dev.py
app/members/: admin.py  models.py  serializers.py  urls.py  views.py
app/members/migrations/: 0001_initial.py  0002_auto_20200513_0615.py  0002_auto_20200515_2137.py  0003_auto_20200513_0617.py  0003_userprofile_recent_attend_date.py  0004_auto_20200513_0617.py  0005_auto_20200513_0619.py  0006_auto_20200513_0801.py  0007_remove_user_recent_attend_date.py  0008_user_recent_attend_date.py  0009_auto_20200513_0827.py  0010_auto_20200513_0829.py  0011_auto_20200513_0831.py  0012_auto_20200513_0833.py
app/members/serializers/: userprofileserializers.py  userserializers.py
app/members/views/: user.py  userprofile.py
app/records/: models.py  urls.py
app/records/migrations/: 0001_initial.py
app/records/serializers/: recordserializers.py
app/records/views/: apiviews.py  record.py
app/reports/: models.py
app/utils/: make_dir.py
(+3 files in other folders)
